# qt-puppycam

./: .gitignore  CMakeLists.txt  README.md
packaging/systemd/: puppycam.service
scripts/: install.sh  update.sh
src/: main.cpp
src/capture/: V4L2MjpegGrabber.cpp  V4L2MjpegGrabber.h
src/core/: FrameHub.cpp  FrameHub.h
src/server/: HttpServer.cpp  HttpServer.h
